infrastructure/controllers/argocd/argocd-server.yaml
# patch-argocd-server.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd
  namespace: argocd
spec:
  selector:
    app: argocd-server
  ports:
    - name: http
      targetPort: 80
      port: 80
    - name: https
      port: 443
      targetPort: 8080
